2006-11-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkwindow.c: Added Gdk::Window#input_shape_combine_(mask|region), 
	#set_child_input_shapes, #merge_child_input_shapes, #type_hint for GTK+-2.10.

2006-11-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkscreen.c: Added Gdk::Screen#font_options, #set_font_options, #active_window,
	#window_stack, composited?
	* src/rbgdkdisplay.c: Added Gdk::Display#supports_(shapes|input_shapes) for GTK+-2.10.
	* src/rbgdkcairo.c: Added Gdk::Cairo#set_source_pixmap for GTK+-2.10.
	* src/rbgdkatom.c: Added Gdk::Atom.intern_static_string for GTK+-2.10. 

2006-11-25  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkpagesetupunixdialog.c: use GTK_CHECK_VERSION(2,10,0)
	instead of HAVE_GTK_GTKPAGESETUPUNIXDIALOG_H.
	Reported by Dobai-Pataky_Balint. (I'm sorry for using 'a') Thanks!

2006-11-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeview.c: Added Gtk::TreeView#search_entry, #set_search_entry, 
	#set_search_position_func for GTK+-2.10.

2006-11-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeview.c: Added Gtk::TreeView::GridLines for GTK+-2.10.
	* src/rbgtktreestore.c: Improved message.
	* src/rbgtktextbuffer.c: Added Gtk::TextBuffer serialize/deserialize functions for GTK+-2.10. 
	* sample/misc/test-assistant.rb: Rename to assistant.rb.
	* sample/misc/textbuffer_serialize.rb: Added a sample for Gtk::TextBuffer serialization..

2006-11-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktargetlist.c: Added Gtk::TargetList#add_rich_text_targets for GTK+-2.10.
	* src/rbgtkselection.c: Gtk::Selection.include_(image|text|uri|rich_text)? for GTK+-2.10.
	* src/rbgtkstyle.c: Added Gtk::Style#lookup_color for GTK*-2.10.
	* src/rbgtkstatusicon.c: Added Gtk::StatusIcon for GTK+-2.10.
	* sample/misc/statusicon.rb: Add a sample for Gtk::StatusIcon.

2006-11-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtk.c: Avoid Gtk::MenuShell from GC. 

2006-11-16  Masao Mutoh  <mutoh@highway.ne.jp>
